Bug 59426 - Incorrect type detection with docx file disguised as doc.
Summary: Incorrect type detection with docx file disguised as doc.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.0.0.1 rc
Hardware: Other All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.1.0 target:4.0.1
Keywords:
: 54949 57769 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-15 15:57 UTC by Kohei Yoshida
Modified: 2020-01-09 17:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Problem document (503.15 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-01-15 15:57 UTC, Kohei Yoshida
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2013-01-15 15:57:24 UTC
Created attachment 73104 [details]
Problem document

The attached document originates from

http://www.ieee.org/documents/TRANS-JOUR.doc

It's a docx document disguised as doc.  When opening this document LibreOffice claims that the file is corrupt.  But if you change the file extension from .doc to .docx, it opens.

The type detection should not have depended on the file extension to do its detection.  Something is wrong here.
Comment 1 Kohei Yoshida 2013-01-15 15:58:06 UTC
Confirming it, and taking it.  I'll look into this later.
Comment 2 Kohei Yoshida 2013-02-04 15:36:44 UTC
I'm looking into this right now.
Comment 3 Not Assigned 2013-02-04 20:39:03 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=709f6ba6ae5d2b5461136595a2469bf1fe32ccff

fdo#59426: Don't try to repair package during flat detection phase.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Not Assigned 2013-02-05 23:55:03 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ac2ee597d39fb45cd4873d4ae345e4dbfa2404eb&h=libreoffice-4-0

fdo#59426: Don't try to repair package during flat detection phase.


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Andras Timar 2013-03-20 11:41:00 UTC
*** Bug 57769 has been marked as a duplicate of this bug. ***
Comment 6 Andras Timar 2013-03-20 11:41:41 UTC
*** Bug 54949 has been marked as a duplicate of this bug. ***