fdo#59426: Don't try to repair package during flat detection phase.

Conflicts:
	comphelper/source/misc/mediadescriptor.cxx
	sc/source/ui/unoobj/scdetect.cxx

Change-Id: I35968241a79db0aabe06e25c0efac2aa3d1c5b84