sd/source/ui/unoidl/sddetect.cxx
@@ -112,6 +112,7 @@ SdFilterDetect::~SdFilterDetect()
 
     sal_Bool bRepairPackage = sal_False;
     sal_Bool bRepairAllowed = sal_False;
+    bool bDeepDetection = false;
 
     // now some parameters that can already be in the array, but may be overwritten or new inserted here
     // remember their indices in the case new values must be added to the array
@@ -162,6 +163,8 @@ SdFilterDetect::~SdFilterDetect()
             lDescriptor[nProperty].Value >>= bRepairPackage;
         else if ( lDescriptor[nProperty].Name == "DocumentTitle" )
             nIndexOfDocumentTitle = nProperty;
+        else if (lDescriptor[nProperty].Name == "DeepDetection")
+            bDeepDetection = lDescriptor[nProperty].Value.get<sal_Bool>();
     }
 
     // can't check the type for external filters, so set the "dont" flag accordingly
@@ -268,6 +271,10 @@ SdFilterDetect::~SdFilterDetect()
                         }
                         catch( const lang::WrappedTargetException& aWrap )
                         {
+                            if (!bDeepDetection)
+                                // Bail out early unless it's a deep detection.
+                                return OUString();
+
                             packages::zip::ZipIOException aZipException;
                             if ( ( aWrap.TargetException >>= aZipException ) && aTypeName.Len() )
                             {
